# PythonProject

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  widget.py
src/: masks.py  processing.py  widget.py
